
    o   Florian Oswald for #2094: DT[,newcol:=NA] now adds a new logical column ok.
        Test added.
    
    o   A large slow down (2s went up to 40s) when iterating calls to DT[...] in a
        for loop, such as in example(":="), was caught and fixed in beta, #2027.
        Speed regression test added.
        
    o   Christoph Jäckel for #2078: by=c(...) with i clause broke. Tests added.


NOTES

    o   There are now (***Update:669***) raw tests, plus S4 tests.
    
    o   v1.8.1 was an R-Forge only beta release. The final v1.8.1 was released
        as v1.8.2 on CRAN, so users who had already upgraded to 1.8.1 are
        prompted to upgrade by update.packages().
        

        **********************************************
        **                                          **
        **   CHANGES IN DATA.TABLE VERSION 1.8.0    **
        **                                          **
        **********************************************

NEW FEATURES

    o   character columns are now allowed in keys and are preferred to
        factor. data.table() and setkey() no longer coerce character to
        factor. Factors are still supported. Implements FR#1493, FR#1224
        and (partially) FR#951.
        
    o   setkey() no longer sorts factor levels. This should be more convenient
        and compatible with ordered factors where the levels are 'labels', in
        some order other than alphabetical. The established advice to paste each
        level with an ordinal prefix, or use another table to hold the factor
        labels instead of a factor column, is no longer needed. Solves FR#1420.
        Thanks to Damian Betebenner and Allan Engelhardt raising on datatable-help
        and their tests have been added verbatim to the test suite.
        
    o   unique(DT) and duplicated(DT) are now faster with character columns,
        on unkeyed tables as well as keyed tables, FR#1724.
